--- a/index.html
+++ b/index.html
@@ -177,6 +177,32 @@
 
           <h2 class="h2 departments-title">We Have Most of Popular Departments</h2>
 
+          
+          <li>
+            <div class="departments-card">
+
+              <a href="uni.html" class="card-banner">
+                <figure>
+                  <img src="./assets/images/img30.png" alt="Artificial Intelligence">
+                </figure>
+              </a>
+
+              <a href="uni.html">
+                <h3 class="h3 card-title">University Trainings & internships</h3>
+              </a>
+
+              <p class="card-text">
+                If you are seeking a Job or training oppurtunity in Fayoum University.
+              </p>
+
+              <a href="uni.html" class="card-link">
+                <span>Learn More</span>
+
+                <ion-icon name="arrow-forward"></ion-icon>
+              </a>
+
+            </div>
+          </li>
           <ul class="departments-list">
 
             <li>
